+ =core-popups= Add support for moving popup windows to the ~+evil/window-move-*~ commands #171

* Unreleased (master)
+ =doom=
  + Added new module: ~lang/ledger~, for editing ledger files.
  + Fixed ~make update~ to work even if Doom is installed somewhere other than ~\~/.emacs.d~ (see [[https://github.com/hlissner/doom-emacs/issues/190][#190]]).
+ =feature=
  + =hydra= Display a separator along the bottom of hydra windows for extra contrast.
+ =ui=
  + =doom-dashboard= Elements are now centered using window-local margins, which fixes discrepancies when multiple dashboards are visible in different sized windows and/or frames (see [[https://github.com/hlissner/doom-emacs/issues/192][#192]]).
+ =org=
  + If a table is under point when ~+org/toggle-fold~ is invoked, the table is realigned.
  + =org-capture= Fix a vestigial reference to a long-since-renamed function: ~doom/project-root~.

* 2.0.5 (Sep 03, 2017)
+ =doom=
  + Added new module: ~tools/rgb~, with tools for dealing with colors (thanks to [[https://github.com/bandresen][bandresen]])
  + Added new module: ~tools/prodigy~, with tools for managing external services (thanks to [[https://github.com/bandresen][bandresen]])
  + Added new module: ~feature/hydra~, offers an extra and customizable layer of modal keybinds (thanks to [[https://github.com/bandresen][bandresen]])
  + Added two new core-lib helpers for macros: ~doom-enlist~ and ~doom-unquote~.
  + Switch to ~doom-fallback-buffer~ after using ~doom/kill-all-buffers~ (or ~:killall!~).
  + ~make doctor~ now does font detection and will complain when fonts are missing.
  + When switching to a new project, a new workspace is spawned and a fuzzy find-file prompt is opened. However, a buffer from the previous workspace would linger on screen *and* the scratch buffer would CD to HOME, rather than the project root. This is fixed now.